2016-04-26  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Fill more paragraphs.

2016-04-25  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Remove unsetenv test.

2016-04-24  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (unsetenv): Remove proc.
	* doc/dejagnu.texi: Update documentation.
	* NEWS: Update.

2016-04-19  Nick Clifton  <nickc@redhat.com>

	* baseboards/msp430-sim.exp: New file.
	* Makefile.am (baseboard_DATA): Add msp430-sim.exp.
	* Makefile.in: Regenerate.

2016-04-18  Ben Elliston  <bje@gnu.org>

	* runtest: Remove quoting in final exec command.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp: Load ssh.exp lib.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* lib/rsh.exp (rsh_open): Fix description comment.

2016-04-17  Ben Elliston  <bje@gnu.org>

	Reported by shellcheck.
	* runtest: Use $((..)) not `expr ..` and defensively double quote
	shell variables.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* Makefile.am (pkgdata_DATA): Add lib/ssh.exp, lib/dmucs.exp.
	* Makefile.in: Regenerate.

2016-04-17  Ben Elliston  <bje@gnu.org>

	Reported by shellcheck.
	* runtest: Use $((..)) not `expr ..`.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* configure.ac (AC_INIT): Update version number.
	* configure: Regenerate.
	* runtest.exp (frame_version): Update version number.
	* doc/dejagnu.texi: Likewise.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* NEWS: Start a new section for the next release.

2016-04-15  Ben Elliston  <bje@gnu.org>

	* Makefile.am (CONTRIB): Add new contrib scripts.
	* Makefile.in: Regenrate.

2016-04-15  Ben Elliston  <bje@gnu.org>

	* lib/ssh.exp (ssh_exec): Handle regexp return status.

2016-04-13  Ben Elliston  <bje@gnu.org>

	* lib/rsh.exp (rsh_exec): Improve verbose message.
	* lib/ssh.exp (ssh_exec): Likewise.
	* config/adb.exp: Likewise.

2016-04-13  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Improve --version (-v) output.
	* testsuite/runtest.all/options.exp: Update test case.
